--- a/demo(vh).html
+++ b/demo(vh).html
@@ -68,7 +68,7 @@
 		}
 		.invite-slide img{
 			width: 74.67vw;
-			/*height: 57.87vh;*/
+			height: 57.87vh;
 		}
 		.invite-info1{
 			width: 100vw;
